# FFI-BRIDGING-WITH-0MQ

./: .gitignore  .gitmodules  Cargo.toml  FFI-BRIDGING-WITH-0MQ.sln  README.md
common/: Cargo.toml
common/src/: lib.rs
dotnet-app/: FFI.cs  Program.cs  dotnet-app.csproj
rust-dummy-server/: Cargo.toml
rust-dummy-server/src/: main.rs
rust-native-lib/: Cargo.toml
rust-native-lib/src/: lib.rs  main.rs
test-ipc/: Cargo.toml
test-ipc/src/: main.rs
